# FlowWatch

./: .clineignore  .clinerules  .gitignore  FlowWatch_Feature_Documentation.docx  GEMINI.md  LICENSE  README.md  codebase_structure_and_code.md  docker-compose.yml  implementation_plan.md  package-lock.json  package.json  pilot_npm_project_details.md  prompt.md
docs/: flowwatch-project-summary.md  pilot-project-summary.md
graphify-out/: GRAPH_REPORT.md  graph.json
sdks/go/: README.md  go.mod
sdks/go/flowwatch/: client.go  types.go
sdks/python/: README.md  pyproject.toml
sdks/python/flowwatch/: __init__.py  client.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs  types.rs
tests/: flowwatch-dashboard.test.mjs  new-features.test.mjs  pilot-dashboard.test.mjs  workflow-resilience.test.mjs
