[project]
name = "flowwatch-client"
version = "2.1.1"
description = "Python client SDK for FlowWatch — feature flags, durable workflows, tracing, and error capture"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "ISC" }
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/PranshulSoni/flowwatch"
Issues = "https://github.com/PranshulSoni/flowwatch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowwatch"]
