[project]
name = "flowwatch-client"
version = "3.0.1"
description = "Python client SDK for FlowWatch — feature flags, durable workflows, tracing, and error capture"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "ISC" }
dependencies = ["httpx>=0.27"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/PranshulSoni/flowwatch"
Issues = "https://github.com/PranshulSoni/flowwatch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowwatch"]
