[package]
name = "flowwatch-client"
version = "2.1.2"
edition = "2021"
description = "Rust client SDK for FlowWatch — feature flags, durable workflows, tracing, and error capture"
readme = "README.md"
homepage = "https://github.com/PranshulSoni/flowwatch"
license = "ISC"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
